fix discipline and retain swap